# waymonad-clients

./: README.md  meson.build
background/: .main.c.swp  README.md  layer.c  main.c  meson.build  render.c  render.h  shell.c  shell.h
common/: .xdg-window.c.swp  LICENSE  buffers.c  cairo.c  list.c  meson.build  pango.c  registry.c  window.c  xdg-window.c
include/common/: .list.h.swp  buffer.h  list.h  registry.h  window.h
protocols/: background.xml  meson.build
